--- a/styles/LoginRegisterModal.css
+++ b/styles/LoginRegisterModal.css
@@ -30,9 +30,10 @@
   top: -290px;
   left: -70px;
   transform: rotate(60deg);
-  background: linear-gradient(
+  /* background: linear-gradient(
     58deg, rgba(243,172,18,1) 20%, rgba(241,196,15,1) 100%
-  );
+  ); */
+  background-color: #dcdcdc;
 }
 
 .login-modal-header-container {
@@ -45,14 +46,14 @@
   font-size: 30px;
   font-weight: 600;
   line-height: 1.24;
-  color: #fff;
+  color: #000;
   z-index: 10;
 }
 
 .login-modal-small-text {
   font-size: 11px;
   font-weight: 500;
-  color: #fff;
+  color: #000;
   margin-top: 7px;
   z-index: 10;
 }
@@ -80,18 +81,18 @@
 
 .login-modal-muted-link {
   font-size: 12px;
-  color: rgba(150, 150, 150, 0.8);
+  color: rgba(100, 100, 100, 0.8);
   font-weight: 500;
   text-decoration: none;
-  border-bottom: 1px dashed rgba(200, 200, 200, 0.8);
+  border-bottom: 1px dashed rgba(100, 100, 100, 0.8);
 }
 
 .login-modal-bold-link {
   font-size: 12px;
-  color: rgba(241,196,15,1);
+  color: #000;
   font-weight: 500;
   text-decoration: none;
-  border-bottom: 1px dashed rgba(241,196,15,1);
+  border-bottom: 1px dashed #000;
 }
 
 .login-modal-input {
@@ -111,7 +112,7 @@
 
   &:focus {
     outline: none;
-    border-bottom: 1px solid rgba(241, 196, 15, 1);
+    border-bottom: 1px solid #000;
   }
 }
 
@@ -119,16 +120,14 @@
   width: 100%;
   max-width: 150px;
   padding: 10px;
-  color: #fff;
+  color: #000;
   font-size: 15px;
   font-weight: 600;
   border: none;
   border-radius: 100px;
   cursor: pointer;
   transition: all 240ms ease-in-out;
-  background: linear-gradient(
-    58deg, rgba(243,172,18,1) 20%, rgba(241,196,15,1) 100%
-  );
+  background-color: #dcdcdc;
 
   &:hover {
     filter: brightness(1.03);
@@ -138,7 +137,7 @@
 
 .login-modal-line-text {
   font-size: 12px;
-  color: rgba(150, 150, 150, 0.8);
+  color: rgba(100, 100, 100, 0.8);
   font-weight: 500;
 }
 
@@ -185,11 +184,11 @@
   font-size: 30px;
   cursor: pointer;
   z-index: 1001;
-  color: white;
+  color: #000;
   transition: transform 0.6s ease;
 
   &:hover {
-    color: rgba(80, 80, 80, 0.8);
+    color: rgba(50, 50, 50, 0.8);
     transform: scale(1.2, 1.2);
   }
 }
