--- a/styles/LoginRegisterModal.css
+++ b/styles/LoginRegisterModal.css
@@ -1,34 +1,35 @@
 .modal-box-container {
-  width: 280px;
+  /* width: 280px; */
   min-height: 550px;
   display: flex;
   flex-direction: column;
-  border-radius: 19px;
+  /* border-radius: 19px; */
   background-color: #fff;
   box-shadow: 0 0 2px rgba(15, 15, 15, 0.28);
   position: relative;
   overflow: hidden;
+  z-index: 10000 !important;
 }
 
 .login-modal-top-container {
   width: 100%;
-  height: 250px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 0 1.8em;
-  padding-bottom: 5em;
+  /* padding: 0 2.5em; */
+  /* padding-bottom: 4em; */
 }
 
 .login-modal-back-drop {
   position: absolute;
-  width: 160%;
+  width: 180%;
   height: 550px;
   display: flex;
   flex-direction: column;
   border-radius: 50%;
-  top: -290px;
-  left: -70px;
+  /* top: -375px; */
+  /* left: -185px; */
   transform: rotate(60deg);
   /* background: linear-gradient(
     58deg, rgba(243,172,18,1) 20%, rgba(241,196,15,1) 100%
@@ -43,15 +44,15 @@
 }
 
 .login-modal-header-text {
-  font-size: 30px;
-  font-weight: 600;
+  /* font-size: 30px; */
+  font-weight: 700;
   line-height: 1.24;
   color: #000;
   z-index: 10;
 }
 
 .login-modal-small-text {
-  font-size: 11px;
+  /* font-size: 13px; */
   font-weight: 500;
   color: #000;
   margin-top: 7px;
@@ -62,7 +63,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0px 20px;
+  padding: 30px 20px;
 }
 
 .login-modal-box-container {
@@ -128,6 +129,8 @@
   cursor: pointer;
   transition: all 240ms ease-in-out;
   background-color: #dcdcdc;
+  align-self: center;
+  margin-top: 20px;
 
   &:hover {
     filter: brightness(1.03);
@@ -145,6 +148,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  justify-content: center;
 }
 
 .user-icon {
